# financeanomaly

./: ._.git  ._.github  ._.gitignore  ._.pytest_cache  ._Dockerfile  ._Makefile  ._PROJECT_SUMMARY.md  ._README.md  ._apps  ._configs  ._data  ._docker  ._docs  ._infrastructure  ._notebooks  ._pyproject.toml  ._pytest.ini  ._quickstart.sh  ._requirements.txt  ._research  ._scripts  ._setup.py  ._src  ._tests  .gitignore  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  pyproject.toml  quickstart.sh  requirements.txt  setup.py
.github/: ._workflows
.github/workflows/: ._ci.yml  ci.yml
.venv_secondpass/: pyvenv.cfg
apps/: .___init__.py  ._api  ._cli  ._dashboard  ._worker
apps/api/: .___init__.py  ._main.py  main.py
apps/cli/: .___init__.py  ._main.py  main.py
apps/dashboard/: .___init__.py  ._app.py  app.py
apps/worker/: .___init__.py  ._worker.py  worker.py
configs/: ._base.yaml  ._development.yaml  ._logging.yaml  ._production.yaml  base.yaml  development.yaml  logging.yaml  production.yaml
data/: ._.gitkeep
dist_tmp/: market_intelligence_platform-0.2.0-py3-none-any.whl
docker/: ._api.Dockerfile  ._dashboard.Dockerfile  ._docker-compose.yml  ._worker.Dockerfile  api.Dockerfile  dashboard.Dockerfile  docker-compose.yml  worker.Dockerfile
docs/: ._ARCHITECTURE.md  ._PRD.md  ._case_study.md  ARCHITECTURE.md  PRD.md  case_study.md
infrastructure/: ._grafana  ._prometheus  ._redis
infrastructure/grafana/: ._dashboards  ._provisioning
infrastructure/prometheus/: ._prometheus.yml  prometheus.yml
infrastructure/redis/: ._.gitkeep
notebooks/: ._evaluation.ipynb  evaluation.ipynb
research/: ._benchmarking  ._experiments  ._notebooks
research/benchmarking/: ._.gitkeep
research/experiments/: ._.gitkeep
research/notebooks/: ._.gitkeep
scripts/: ._backfill.py  ._retrain.py  ._run_local.sh  backfill.py  retrain.py  run_local.sh
src/: ._ap  ._mip
src/ap/: .___init__.py  .___pycache__  ._api  ._cli.py  ._explain  ._ingest  ._models  ._persistence  ._processing  ._ui  ._utils  __init__.py  cli.py
src/mip/: .___init__.py  .___pycache__  ._alerting  ._config.py  ._detection  ._domain  ._drift  (+10 more)
tests/: .___init__.py  .___pycache__  ._conftest.py  ._fixtures  ._integration  ._performance  ._unit  __init__.py  conftest.py
(+162 files in other folders)
