[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-intelligence-platform"
version = "0.2.0"
description = "Real-time market surveillance and anomaly detection system with explainable AI."
authors = [
    {name = "Your Name", email = "your@email.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.0.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "river>=0.21",
    "shap>=0.44",
    "streamlit>=1.28",
    "plotly>=5.17",
    "redis>=5.0",
    "prometheus-client>=0.19",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "httpx>=0.26",
    "websockets>=12.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[project.scripts]
mip-cli = "apps.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "apps*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
